--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple google books API wrapper",
   "scripts": {
     "build": "babel src -d dist",
-    "books": "npm run build && books"
+    "books": "yarn build && books",
+    "test": "jest"
   },
   "author": "Ivo Jesus",
   "license": "ISC",
@@ -15,6 +16,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jest": "^20.0.3",
+    "expect.js": "^0.3.1",
+    "jest": "^20.0.4",
     "prettyjson": "^1.2.1"
   }
 }
