--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^4.0.0"
   },
   "devDependencies": {
+    "ajv": "^5.1.5",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
